[package]
name = "daemon_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] } # For CLI parsing
crossbeam = "0.8"  # For multi-producer, multi-consumer channels
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For serializing messages
tokio = { version = "1", features = ["full"] }  # Add Tokio for async runtime

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "daemon_bidirec"
path = "src/bin/daemon_bidirec.rs"

[[bin]]
name = "cli_bidirec"
path = "src/bin/cli_bidirec.rs"

[[bin]]
name = "daemon_tokio"
path = "src/bin/daemon_tokio.rs"

[[bin]]
name = "cli_tokio"
path = "src/bin/cli_tokio.rs"
